Layout bugs landscap fix

--- a/src/js/Components/Container/FooterMenu/footer-menu.scss
+++ b/src/js/Components/Container/FooterMenu/footer-menu.scss
@@ -2,7 +2,7 @@
 @import "../../../../style/utils/_variables.scss";
 
 .footer-menu {
-  flex: 1 1 rem(300px);
+  flex: 1 1 rem(600px);
 
   &__list {
     align-items: center;
