--- a/src/js/Components/Container/Search/search.scss
+++ b/src/js/Components/Container/Search/search.scss
@@ -14,6 +14,11 @@
     position: relative;
     z-index: 50;
 
+    @media(orientation: landscape) {
+      height: calc(100vh - 55px);
+      min-height: rem(250px);
+    }
+
     @media(min-width: $media-lg) {
       min-height: rem(350px);
       height: calc(100vh - 230px);
@@ -42,6 +47,11 @@
     height: 100%;
     position: relative;
     z-index: 20;
+
+    @media(orientation: landscape) {
+      height: auto;
+      width: 100%;
+    }
 
     @media(min-width: $media-lg) {
       width: 100%;
