--- a/src/js/Components/Presentational/Map/map.scss
+++ b/src/js/Components/Presentational/Map/map.scss
@@ -25,6 +25,10 @@
     flex-wrap: wrap;
     margin-bottom: rem(40px);
 
+    @media(orientation: landscape) {
+      justify-content: space-between;
+    }
+
     @media(min-width: $media-lg) {
       justify-content: space-between;
       margin-bottom: rem(60px);
@@ -43,6 +47,10 @@
     margin-bottom: rem(10px);
     text-align: center;
 
+    @media(orientation: landscape) {
+      text-align: left;
+    }
+
     @media(min-width: $media-lg) {
       font-size: rem(26px);
       letter-spacing: rem(.8px);
@@ -59,6 +67,10 @@
     iframe {
       height: rem(300px);
       width: 100%;
+
+      @media(orientation: landscape) {
+        height: rem(250px);
+      }
     }
   }
 
@@ -88,6 +100,11 @@
   display: flex;
   justify-content: center;
   margin-bottom: rem(20px);
+
+  @media(orientation: landscape) {
+    justify-content: flex-start;
+    margin-bottom: 0;
+  }
 
   @media(min-width: $media-lg) {
     justify-content: flex-start;
